some typography fixes

--- a/sandbox.html
+++ b/sandbox.html
@@ -33,8 +33,14 @@
     </header>
     <main>
       <div class="s-wrapper">
+        <div class="s-col">
+          <p><a href="#" class="s-btn">Button</a>
+            <button class="s-btn">Button</button>
+            <input type="submit" value="Button" class="s-btn">
+          </p>
+        </div>
         <div class="s-col s-md-6">
-          <div class="s-box"><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_left">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_left">
             <div class="s-box-caption_right">
               <h3>Title</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -42,8 +48,40 @@
           </div>
         </div>
         <div class="s-col s-md-6">
-          <div class="s-box"><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
             <div class="s-box-caption_left">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="s-col s-md-6">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_left">
+            <div class="s-box-caption_right">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="s-col s-md-6">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
+            <div class="s-box-caption_left">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="s-col s-md-6">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
+            <div class="s-box-caption_left">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="s-col s-md-6">
+          <div class="s-box"><img style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_left">
+            <div class="s-box-caption_right">
               <h3>Title</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
