trying to fix navbar

--- a/sandbox.html
+++ b/sandbox.html
@@ -147,6 +147,18 @@
             <li><a href="#" class="s-box-heading">Website</a></li>
             <li><a href="#">Item</a></li>
             <li>Item that is not a link.</li>
+            <li><a href="#">Item</a></li>
+          </ul>
+          <ul class="s-right">
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+          </ul>
+        </nav>
+        <nav class="s-box s-grey">
+          <ul>
+            <li><a href="#" class="s-box-heading">Website</a></li>
+            <li><a href="#">Item</a></li>
+            <li>Item that is not a link.</li>
             <li><a href="#" class="s-btn">Item</a></li>
             <li><a href="#">Item</a></li>
           </ul>
