--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@ sit amet</pre>
             </section>
             <h3>Container</h3>
             <p>To contain the page in a nice, centered wrapper, use <code>.s-wrapper</code></p>
-            <p>This will have no effect for pages under 1200px. Screens larger than this will keep your site in a 1200px wrapper with equal spacing on the left and right.</p>
+            <p>This will have no effect for pages under 1700px. Screens larger than this will keep your site in a 1700px wrapper with equal spacing on the left and right.</p>
+            <p>For different sizes, add an additiona class with the form s-[size] where [size] is xs, sm, md, or lg.</p>
+            <pre>&lt;div class=&quot;s-wrapper s-lg&quot;&gt;&lt;/div&gt;</pre>
             <h2 id="growls">Growls</h2>
             <p>Growls are unobtrusive pop up messages called via JavaScript. A basic call might look like this:</p>
             <pre>$.sGrowl({
@@ -353,6 +355,18 @@ sit amet</pre>
     &lt;p&gt;Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
   &lt;/div&gt;
 &lt;/div&gt;</pre>
+            <h2 id="progress">Progress</h2>
+            <p>Use the default HTML5 <code>progress</code> element with the <code>.s-box</code> class.</p>
+            <progress value="30" max="100" class="s-box s-3"></progress>
+            <pre>&lt;progress class="s-box s-3" value="30" max="100"&gt;&lt;/progress&gt;</pre>
+            <p>Add <code>.s-[color]</code> for alternate colors.</p>
+            <pre>&lt;progress class="s-box s-red" value="30" max="100"&gt;&lt;/progress&gt;</pre>
+            <progress value="30" max="100" class="s-box s-red"></progress>
+            <progress value="30" max="100" class="s-box s-orange"></progress>
+            <progress value="30" max="100" class="s-box s-yellow"></progress>
+            <progress value="30" max="100" class="s-box s-green"></progress>
+            <progress value="30" max="100" class="s-box s-blue"></progress>
+            <progress value="30" max="100" class="s-box s-violet"></progress>
             <h2 id="typography">Typography</h2>
             <p>Typography relies mostly on standard HTML5 elements.</p>
             <p>Use hx (where x = 1-5) for headings and p, etc for basic text formatting.</p>
@@ -377,6 +391,7 @@ sit amet</pre>
                 <li><a href="#grid">Grid</a></li>
                 <li><a href="#growls">Growls</a></li>
                 <li><a href="#images">Images</a></li>
+                <li><a href="#progress">Progress</a></li>
                 <li><a href="#typography">Typography</a></li>
               </ul>
             </div>
