--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ sit amet</pre>
             <progress value="30" max="100" class="s-box s-green"></progress>
             <progress value="30" max="100" class="s-box s-blue"></progress>
             <progress value="30" max="100" class="s-box s-violet"></progress>
+            <progress value="30" max="100" class="s-box s-white"></progress>
+            <progress value="30" max="100" class="s-box s-blue s-clear s-bordered"></progress>
             <h2 id="typography">Typography</h2>
             <p>Typography relies mostly on standard HTML5 elements.</p>
             <p>Use hx (where x = 1-5) for headings and p, etc for basic text formatting.</p>
